--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
@@ -914,6 +914,8 @@
                                                 }
                                                 <li class="@(ViewBag.SegundoNivel == "ci_conteo_inventario_sap" ? "current-page" : null )"><a href="@Url.Action("Index", "Inv_Captura", new {plantaFiltro = "5390"})">Inventario Silao (5390)</a></li>
                                                 <li class="@(ViewBag.SegundoNivel == "ci_conteo_inventario_sap" ? "current-page" : null )"><a href="@Url.Action("Index", "Inv_Captura", new {plantaFiltro = "5190"})">Inventario Puebla (5190)</a></li>
+                                                <li class="@(ViewBag.SegundoNivel == "ci_conteo_inventario_sap" ? "current-page" : null )"><a href="@Url.Action("Index", "Inv_Captura", new {plantaFiltro = "5890"})">Inventario SLP (5890)</a></li>
+                                                <li class="@(ViewBag.SegundoNivel == "ci_conteo_inventario_sap" ? "current-page" : null )"><a href="@Url.Action("Index", "Inv_Captura", new {plantaFiltro = "5490"})">Inventario Saltillo (5490)</a></li>
 
                                             </ul>
                                         </li>
