--- a/CódigoFuente/BitacorasProduccion/Views/BG_forecast_cat_clientes/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/BG_forecast_cat_clientes/Index.cshtml
@@ -60,9 +60,13 @@
                     <div class="x_content">
                         <div class="form-group">
                             @* Los valores por defecto estaán en el primer registro *@
-                            <a href="@Url.Action( "Edit", ViewBag.ControllerName, new {id=1})" class="btn btn-success">
+                            <a href="@Url.Action("Create", ViewBag.ControllerName, new { id = 1 })" class="btn btn-success">
                                 <i class="fa fa-plus-square"></i>
                                 Agregar
+                            </a>
+                            <a href="@Url.Action("Index", "BG_Forecast_cat_historico_ventas", new { id = 1 })" class="btn btn-primary float-right">
+                                <i class="fa-solid fa-file-pen"></i>
+                                Editar Histórico de Ventas
                             </a>
                         </div>
                         <div class="ln_solid"></div>
@@ -70,18 +74,26 @@
                             <thead>
                                 <tr>
                                     <th>
-                                        @Html.DisplayNameFor(model => model.descripcion)
+                                        #
                                     </th>
                                     <th>
-                                        @Html.DisplayNameFor(model => model.activo)
+                                        Nombre cliente
                                     </th>
-                                    <th></th>
+                                    <th>
+                                        Estatus
+                                    </th>
+                                    <th>Acciones</th>
                                 </tr>
                             </thead>
                             <tbody>
+                                @{int c = 1; }
                                 @foreach (var item in Model)
                                 {
+                                    
                                     <tr>
+                                        <td>
+                                            @(c++)
+                                        </td>
                                         <td>
                                             @Html.DisplayFor(modelItem => item.descripcion)
                                         </td>
@@ -99,20 +111,17 @@
                                             <a href="@Url.Action("Edit", ViewBag.ControllerName, new { id = item.id})" class="btn btn-success btm-sm" title="Editar">
                                                 <i class="fa-regular fa-pen-to-square"></i>
                                             </a>
-                                            <a href="@Url.Action("Details", ViewBag.ControllerName, new { id = item.id})" class="btn btn-info btm-sm" title="Detalles">
-                                                <i class="fa fa-info-circle"></i>
-                                            </a>
 
                                             @if (!item.activo)
                                             {
                                                 <a href="@Url.Action("Enable", ViewBag.ControllerName, new { id = item.id })" class="btn btn-warning" s title="Habilitar">
-                                                    <i class="fa fa-unlock"></i>
+                                                    <i class="fa-regular fa-circle-check"></i>
                                                 </a>
                                             }
                                             else
                                             {
                                                 <a href="@Url.Action("Disable", ViewBag.ControllerName, new { id = item.id })" class="btn btn-danger" title="Deshabilitar">
-                                                    <i class="fa fa-lock"></i>
+                                                    <i class="fa-solid fa-ban"></i>
                                                 </a>
                                             }
                                         </td>
