--- a/CódigoFuente/BitacorasProduccion/Views/BG_ihs_vehicle_custom/UpdateDemand.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/BG_ihs_vehicle_custom/UpdateDemand.cshtml
@@ -42,7 +42,7 @@
 <div class="right_col" role="main">
     <div class="page-title">
         <div class="title_left">
-            <h3>@ViewBag.Title</h3>
+          
         </div>
     </div>
     <div class="clearfix"></div>
@@ -58,6 +58,42 @@
                     <div class="clearfix"></div>
                 </div>
                 <div class="x_content">
+
+                    <div class="form-group row">
+                        <span style="color:gray"><b>Carga masiva:</b></span>
+                    </div>
+                    <div class="form-group row">
+                        @if (TempData["ErrorMessage"] != null)
+                        {
+                            <div class="alert alert-danger col-md-12">
+                                @TempData["ErrorMessage"]
+                            </div>
+                        }
+                        @if (TempData["SuccessMessage"] != null)
+                        {
+                            <div class="alert alert-success col-md-12">
+                                @TempData["SuccessMessage"]
+                            </div>
+                        }
+                    </div>
+                    <div class="form-group d-flex align-items-center">
+
+                        @using (Html.BeginForm("UploadDemandTemplate", null, FormMethod.Post, new { enctype = "multipart/form-data", @class = "form-inline w-100" }))
+                        {
+                            <button type="button" class="btn btn-primary btn-sm" id="downloadTemplate">
+                                <i class="fa fa-download"></i> Descargar plantilla
+                            </button>
+                            <div class="custom-file" style="width: 500px;">
+                                <input type="file" class="custom-file-input" id="uploadedFile" name="uploadedFile">
+                                <label class="custom-file-label" for="uploadedFile">Seleccionar archivo</label>
+                            </div>
+                            <button type="submit" class="btn btn-sm btn-success ml-2">
+                                <i class="fa fa-upload"></i> Subir archivo
+                            </button>
+                        }
+                    </div>
+                    <div class="ln_solid"></div>
+
                     <!-- Dropdown para Seleccionar Año -->
                     <div class="form-group d-flex align-items-center">
                         <label for="yearSelector" class="mr-2">Seleccionar Año:</label>
@@ -85,7 +121,14 @@
     <script src="https://cdn.jsdelivr.net/npm/handsontable/dist/handsontable.full.min.js"></script>
     @Scripts.Render(Url.Content("~/Content/vendors/select2/js/select2.full.min.js"))
 
-    <script>
+<script>
+        $(document).on('change', '.custom-file-input', function () {
+            var fileName = $(this).val().split('\\').pop();
+            $(this).siblings('.custom-file-label').html(fileName);
+        });
+
+
+
         $(document).ready(function () {
             // Initialize Select2 Elements (debe ir después de asignar el valor)
             $('.select2bs4').select2({
@@ -225,7 +268,13 @@
                     }
                 });
             });
+
+
+              document.getElementById("downloadTemplate").addEventListener("click", function () {
+                window.location.href = '@Url.Action("DownloadDemandTemplate", "BG_ihs_vehicle_custom")';
+              });
+
         });
 
-    </script>
+</script>
 }
